# vecapp_ai_dev

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  check_and_drop_db.py  docker-compose.yml  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: 01-ai-build-dev.yml  01-ai-deploy-dev.yml  02-ai-build-prod.yml  02-ai-deploy-prod.yml  ci.yml
.trae/rules/: project_rules.md
.vercel/: project.json
app/: __init__.py  main.py  vecapp_ai.py
app/agents/: __init__.py  base_agent.py  data_collection_agent.py  evaluation_agent.py  feedback_loop_agent.py  follow_up_agent_oai.py  followup_note_agent.py  followup_summary_agent.py  generative_agent.py  specialist_agent.py  test_agent.py  volunteer_coordination_agent.py
app/api/: __init__.py  analytics.py  api.py  exceptions.py  followup_summary_report.py  main.py  middleware.py  schemas.py
app/api/routes/: analytics.py  auth_routes.py  batch_tenants.py  followup.py  followup_notes.py  followup_summary_report.py  tenants.py  visitor.py  volunteer.py
app/api/routes/v1/: __init__.py  (+3 more)
app/api/schemas/: __init__.py  ai_models.py  auth_user.py  batch_tenant.py  event_schemas.py  feedback.py  notes.py  task.py  tenant.py  visitor_welcome_form.py
app/api/v1/: __init__.py
app/archived/: connection_manager.py  database.py  env.py
app/config/: messaging_setup.py  monitoring.py  settings.py
app/core/: __init__.py  analytics.py  auth.py  config.py  database.py  messaging.py  notifications.py  report_management.py  vecapp_ai.py
app/data/: __init__.py  base_repository.py  data_fetcher.py  event_driven_repository.py  report_repository.py  sqs_client.py  storage.py  unit_of_work.py  visitor_repository.py
app/data/ai/: vector_store.py
app/data/cache/: repository_cache.py
app/data/events/: data_events.py  visitor_event_listener.py
app/data/interfaces/: ai_auth_interface.py  ai_task_repository.py  calendar_service_interface.py  connect_service_interface.py  data_sync_service_interface.py  external_auth_service_interface.py  external_services_manager.py  feedback_repository.py  member_service_interface.py  report_repository.py  report_repository_interface.py  repository.py  tenant_provisioning_interface.py
app/data/repositories/: __init__.py  ai_auth_repository.py  ai_service_repository.py  calendar_service_repository.py  connect_service_repository.py  event_driven_repository.py  external_auth_repository.py  member_service_repository.py  report_repository.py  tenant_provisioning_repository.py  visitor_repository.py
app/database/: apply_tenant_migrations.py  connection.py  create_tenant.py  database.py  migrate_to_tenant_schemas.py  models.py  schema_migration.py  tenant_management.py
app/database/alembic/: env.py
app/database/migrations/: apply_tenant_migrations.py  env.py  migrate.py
app/database/models/: __init__.py  base.py  common.py  decision_audit.py  enums.py  feedback.py  notes.py  person.py  recommendation_log.py  reports.py  suppression_log.py  tenant.py  tenant_registry.py  visitor.py
app/database/repositories/: __init__.py  apply_tenant_migrations.py  base.py  base_repository.py  connection.py  create_tenant.py  dependencies.py  schema_migration.py  tenant.py  tenant_context.py  tenant_management.py
app/events/: visitor_event_listener.py
app/feedback/: langsmith_integration.py
app/infastructure/aws/: sqs_client.py
app/llm/: __init__.py  chains.py  prompts.py
app/models/: metrics.py  report.py  visitor.py
app/orchestration/: report_generator.py
app/security/: __init__.py  api_key.py  auth.py  dependencies.py  service_auth.py  tenant_context.py  token_service.py  token_validator.py
app/services/: ai_auth_service.py  analytics_service.py  batch_tenant_service.py  calendar_service.py  connect_service.py  external_auth_service.py  external_auth_sync_service.py  followup_service.py  member_service.py  messaging_service.py  multi_tenant_service.py  report_service.py  tenant_auth_seeder.py  tenant_provisioning_service.py  tenant_service.py  visitor_context_builder.py
app/tests/: test_batch_tenant_provisioning.py  test_data_collection_agent.py  test_db_connection.py  test_external_db_connections.py  test_feedback_system.py  test_followup_api.py  test_generative_agent.py  test_multi_tenant_system.py  test_response_integration.py  test_schema_sync.py  test_tenant_api.py  test_tenant_provisioning.py  test_trace.py
app/utils/: ai_context_helpers.py  pdf_generator.py  production_error_handler.py  sqs_message_handler.py
deployments/kubernetes/: vecapp-ai-depl.yaml
docs/: BATCH_TENANT_PROVISIONING.md  DUAL_MIGRATION_SYSTEM.md  FEEDBACK_REQ_.md  FEEDBACK_SYSTEM.md  FOLDER_STRUCTURE_GUIDE.md  FOLDER_STRUCTURE_LATEST.md  FOLLOWUP_NOTES_README.md  MEMBER_SERVICE_INTEGRATION.md  MIGRATION_CLEANUP_SUMMARY.md  MIGRATION_ENHANCMENT_PLAN.md  MULTI_TENANT_SETUP.md  README_BATCH_TENANT_SYSTEM.md  README_MULTI_TENANT.md  TENANT_MIGRATION_COMPLETENESS_ANALYSIS.md
docs/sample_data/: church_events_sample_data.json  member_profile.sql  task_sample_data.json  team_sample_data.json
examples/: batch_tenant_provisioning_example.py  feedback_example.py
infra/deployments/kubernetes/: monitoring.yaml  vecapp-ai-depl.yaml
infra/k8s/: analytics-deployment.yaml
infra/k8s-dev/k8s-apps/: vecap-ai-depl.yml
infra/k8s-local/: deployment.yaml
protos/: followup_service.proto
(+46 files in other folders)
